RIP-v10.8- /mobile overflow fix in progress

--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,10 @@
   padding-top          : 90px;
   width                : 100%;
   height               : 100%;
+  overflow: hidden;
+  overflow-y: auto;
+
+  
 
 
   grid-template-areas  :
