--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
   justify-content: flex-start;
   align-items    : center;
   width          : 100%;
-  height         : 100%;
+  height         : 100dvh;
   overflow: hidden;
 
   max-width: 3080px;
